# video-spectrogram

./: LICENSE  README.md  pyproject.toml
src/video_spectrogram/: __init__.py  cli.py  spectrogram.py
