[project]
name = "video-spectrogram"
version = "0.1.0"
description = ""
authors = [{ name = "nicolasloizeau", email = "nicolasloizeau@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "video_spectrogram", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
video-spectrogram = "video_spectrogram.cli:cli"
